corrected manu behavior on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ body .main {
     }
     
     .main-img {
-        height: 20em;
+        height: 30em;
     }
     .main-img img {
 /*        left: 20%;*/
@@ -229,6 +229,7 @@ body .main {
         top: 3em;
         width:100%;
         font-size: 1.3em;
+        margin-top: 4em;
     }
     .main-right .heading {
         font-size: 1.15em;
@@ -239,6 +240,18 @@ body .main {
     .main-right .description {
         padding: 10%;
         margin-bottom: 10%;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .main-img {
+        height: 20em;
+    }
+    .main-img img {
+/*        left: 20%;*/
+        margin-top: 4em;
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
     }
 }
 
